name:                yesod-selenium
version:             0.1.0.0
synopsis:            selenium for Yesod
description:         selenium for Yesod integration tests
homepage:            https://github.com/joelteon/yesod-selenium.git
license:             MIT
license-file:        LICENSE
author:              Joel Taylor
maintainer:          me@joelt.io
category:            Testing
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Yesod.Test.Selenium
  build-depends:       base >=4.6 && <4.7
                     , blaze-builder
                     , bytestring
                     , hspec
                     , http-types
                     , selenium-server
                     , text
                     , wai
                     , warp
                     , webdriver
                     , yesod-core
                     , yesod-routes
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite test
  type:             exitcode-stdio-1.0
  main-is:          main.hs
  hs-source-dirs:   tests
  build-depends:    base
                  , hspec
                  , mtl
                  , text
                  , transformers
                  , yesod
                  , yesod-selenium
  default-language: Haskell2010
